--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -702,6 +702,7 @@ section,
 
 .section-title p {
   margin-bottom: 0;
+  color: #333;
 }
 
 /*--------------------------------------------------------------
